[package]
name = "kpr"
version = "0.1.0"
edition = "2021"
description = "kpr (pronounced 'keeper') lets you take and retrieve notes without leaving your command line."
authors = ["Jesse Treharne <jessetreharne@gmail.com>"]
documentation = "https://github.com/treharne/kpr"
repository = "https://github.com/treharne/kpr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
dirs = "5.0.0"
fs2 = "0.4.3"
rev_buf_reader = "0.3.0"
rust-stemmers = "1.2.0"
serde = "1.0.159"
